Work on validation service

--- a/app/views/sign-up.html
+++ b/app/views/sign-up.html
@@ -1,33 +1,33 @@
-<form class="signup-form form-horizontal" id="user_new" method="post">
+<form class="signup-form form-horizontal" id="user_new"  ng-submit="submitSignUp()">
   <form-group>
-    <label class="control-label" for="user_first_name">First Name
+    <label class="control-label" for="user_first_name">*First Name
     </label>
-    <input  id="user_first_name" class="form-control" type="text" name="first_name" placeholder="John" autocomplete="given-name">
+    <input  ng-model="newUser.firstName" id="user_first_name" class="form-control" type="text" name="first_name" placeholder="John" autocomplete="given-name">
   </form-group>
   <form-group>
-    <label class="control-label" for="user_last_name">Last Name
+    <label class="control-label" for="user_last_name">*Last Name
     </label>
-    <input id="user_last_name" class="form-control" type="text" name="last_name" placeholder="Doe" autocomplete="family-name">
+    <input id="user_last_name" ng-model="newUser.lastName" class="form-control" type="text" name="last_name" placeholder="Doe" autocomplete="family-name">
   </form-group>
   <form-group>
-    <label for="user_email">Email </label>
-      <input id="user_email" class="form-control" type="email" name="email" placeholder="example@example.com" autocomplete="email">
+    <label for="user_email">*Email </label>
+      <input id="user_email" ng-model="newUser.email" class="form-control" type="email" name="email" placeholder="example@example.com" autocomplete="email">
   </form-group>
   <form-group>
-    <label for="user_password">Password (min. 8 characters)</label>
-    <input id="user_password" class="form-control" type="password" name="password" autocomplete="off">
+    <label for="user_password">*Password (min. 8 characters)</label>
+    <input id="user_password" ng-model="newUser.password" class="form-control" type="password" name="password" autocomplete="off">
   </form-group>
   <form-group>
-    <label for="user_password_repeat">Please repeat your password</label>
-    <input id="user_password_repeat" class="form-control" type="password" name="password" autocomplete="off">
+    <label for="user_password_repeat">*Please repeat your password</label>
+    <input id="user_password_repeat" ng-model="newUser.repeatPassword" class="form-control" type="password" name="password" autocomplete="off">
   </form-group>
   <form-group>
     <label for="user_bday">Birthday</label>
-    <input id="user_bday" class="form-control" type="date" name="bday" autocomplete="bday">
+    <input id="user_bday" class="form-control" ng-model="newUser.bday" type="date" name="bday" autocomplete="bday">
   </form-group>
   <form-group>
     <label for="user_favourite_event">You favorite type of event:</label>
-    <input id="user_favourite_event" class="form-control" list="event-types" name="favorite_event">
+    <input id="user_favourite_event" class="form-control" ng-model="newUser.favorite" list="event-types" name="favorite_event">
     <datalist id="event-types">
       <option value="Birthday party">
       <option value="Masquerade ball">
@@ -36,4 +36,5 @@
       <option value="Going out to the movies">
     </datalist>
   </form-group>
+  <button type="submit" class="btn btn-default">Submit</button>
 </form>
