--- a/app/views/sign-up.html
+++ b/app/views/sign-up.html
@@ -1,13 +1,13 @@
-<form class="signup-form form-horizontal" id="user_new"  ng-submit="submitSignUp(newUser)">
+<form class="signup-form form-horizontal" id="user_new"  >
   <form-group>
     <label class="control-label" for="user_first_name">*First Name
     </label>
-    <input  required ng-model="newUser.firstName" id="user_first_name" class="form-control" type="text" name="first_name" placeholder="John" autocomplete="given-name">
+    <input  required ng-model="newUser.firstName" id="user_first_name" class="custom-validation form-control" type="text" name="first_name" placeholder="John" autocomplete="given-name">
   </form-group>
   <form-group>
     <label class="control-label" for="user_last_name">*Last Name
     </label>
-    <input required id="user_last_name" ng-model="newUser.lastName" class="form-control" type="text" name="last_name" placeholder="Doe" autocomplete="family-name">
+    <input required id="user_last_name" ng-model="newUser.lastName" class="custom-validation form-control" type="text" name="last_name" placeholder="Doe" autocomplete="family-name">
   </form-group>
   <form-group>
     <label for="user_email">*Email </label>
@@ -15,11 +15,11 @@
   </form-group>
   <form-group>
     <label for="user_password">*Password (min. 8 characters)</label>
-    <input required id="user_password" ng-model="newUser.password" class="form-control" type="password" name="password" autocomplete="off">
+    <input required id="user_password" ng-model="newUser.password" class="custom-validation form-control" type="password" name="password" autocomplete="off">
   </form-group>
   <form-group>
     <label for="user_password_repeat">*Please repeat your password</label>
-    <input required id="user_password_repeat" ng-model="newUser.repeatPassword" class="form-control" type="password" name="password" autocomplete="off">
+    <input required id="user_password_repeat" ng-model="newUser.repeatPassword" class="custom-validation form-control" type="password" name="password" autocomplete="off">
   </form-group>
   <form-group>
     <label for="user_bday">Birthday</label>
@@ -36,5 +36,5 @@
       <option value="Going out to the movies">
     </datalist>
   </form-group>
-  <button type="submit" class="btn btn-default">Submit</button>
+  <button type="submit" class="btn btn-default" ng-click="submitSignUp(newUser)">Submit</button>
 </form>
