--- a/app/views/log-in.html
+++ b/app/views/log-in.html
@@ -1,1 +1,15 @@
-Log in
+<div ng-show="authCtrl.error">
+  <span>{{authCtrl.error.message}}</span>
+</div>
+<form class="signup-form form-horizontal" id="user_new"  >
+  <form-group>
+    <label for="user_email">*Email </label>
+    <input required pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$" id="user_email" ng-model="user.email" class="form-control" type="email" name="email" placeholder="example@example.com" autocomplete="email">
+  </form-group>
+  <form-group>
+    <label for="{{user.passwordId}}">*Password (min. 8 characters)</label>
+    <input required id="{{user.passwordId}}" ng-model="user.password" class="custom-validation form-control" type="password" name="password" autocomplete="off">
+  </form-group>
+
+  <button type="submit" class="btn btn-default" ng-click="authCtrl.login(user)">Submit</button>
+</form>
