Work on user authentication with firebase

--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1>Welcome to Join Me!</h1>
-  <p class="lead">Browse events created by other people or create your own</p>
+  <p class="lead">Browse events created by other users or create your own</p>
 </div>
 
 <div class="row events-list">
