--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -4,14 +4,9 @@
 
 <form class="signup-form form-horizontal" id="user_new"  >
   <form-group>
-    <label class="control-label" for="{{user.firstNameId}}">*First Name
+    <label class="control-label" for="{{user.nameId}}">*First Name
     </label>
-    <input  required ng-model="user.firstName" id="{{user.firstNameId}}" class="custom-validation form-control" type="text" name="first_name" placeholder="John" autocomplete="given-name">
-  </form-group>
-  <form-group>
-    <label class="control-label" for="{{user.lastNameId}}">*Last Name
-    </label>
-    <input required id="{{user.lastNameId}}" ng-model="user.lastName" class="custom-validation form-control" type="text" name="last_name" placeholder="Doe" autocomplete="family-name">
+    <input  required ng-model="user.name" id="{{user.nameId}}" class="custom-validation form-control" type="text" name="name" placeholder="Tony Smith" autocomplete="name">
   </form-group>
   <form-group>
     <label for="user_email">*Email </label>
