--- a/app/views/login.html
+++ b/app/views/login.html
@@ -11,5 +11,5 @@
     <input required id="{{user.passwordId}}" ng-model="user.password" class="custom-validation form-control" type="password" name="password" autocomplete="off">
   </form-group>
 
-  <button type="submit" class="btn btn-default" ng-click="authCtrl.login(user)">Submit</button>
+  <button type="submit" class="btn btn-default" ng-click="login(user)">Submit</button>
 </form>
