Classes toggle added to app main menu

--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1>Welcome to Join Me!</h1>
+  <h1>Welcome to <strong>Join Me</strong>!</h1>
   <p class="lead">Browse events created by other users or create your own</p>
 </div>
 
