--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -31,7 +31,7 @@
       <option value="Birthday party">
       <option value="Masquerade ball">
       <option value="Conference">
-      <option value="Dining out">
+      <option value="Dinner out">
       <option value="Going out to the movies">
     </datalist>
   </form-group>
