--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -7,11 +7,11 @@
   <div class="col-lg-6">
     <ul class="events">
       <li class="event">Events will be showed there</li>
-      <li ng-repeat="message in messages | orderBy:orderBy">
-        {{ message.name }}: {{ message.type}}
+      <li ng-repeat="meetUpEvent in meetUpEvents | orderBy:orderBy">
+        {{ meetUpEvent.name }}: {{ meetUpEvent.type}}
 
         <!-- delete a message using $remove -->
-        <a href="" ng-click="messages.$remove(message)">X</a>
+        <a href="" ng-click="meetUpEvents.$remove(meetUpEvent)">X</a>
       </li>
     </ul>
   </div>
