--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,3 +7,20 @@ $icon-font-path: '../fonts/';
 h1{
   color: hotpink !important;
 }
+
+form#create-event .form-group#address{
+  label{
+    display: inline-block;
+    max-width: 100%;
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.428571429;
+    color: #333333;
+  }
+}
+
+form#create-event fieldset{
+  margin-bottom: 2rem;
+}
