--- a/app/views/event.html
+++ b/app/views/event.html
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
       <label for="event_start_time">*Event start time</label>
-      <input  id="event_start_time" ng-model="eventData.timeStart" class="validation-time form-control" type="time" name="event_start_time" placeholder="" required>
+      <input  id="event_start_time" ng-model="eventData.timeStart" class="validation-time form-control" type="text" name="event_start_time" placeholder="" required>
     </div>
     <div class="form-group">
       <label for="event_end_date">Event end date</label>
@@ -36,7 +36,7 @@
     </div>
     <div class="form-group">
       <label for="event_end_time">Event end time</label>
-      <input  id="event_end_time" ng-model="eventData.timeEnd" class="validation-time form-control" type="time" name="event_end_time" placeholder="" required>
+      <input  id="event_end_time" ng-model="eventData.timeEnd" class="validation-time form-control" type="text" name="event_end_time" placeholder="" required>
     </div>
   </fieldset>
 
@@ -50,30 +50,30 @@
     <div class="form-group" id="address">
         <label class="label">Street address</label>
         <div class="slimField">
-          <input class="form-control field" id="street_number" disabled="true">
+          <input class="form-control field" id="street_number" ng-model="eventData.address.streetPartOne" disabled="true">
         </div>
         <div class="wideField" colspan="2">
-          <input class="form-control field" id="route" disabled="true">
+          <input class="form-control field" ng-model="eventData.address.streetPartTwo" id="route" disabled="true">
         </div>
 
         <label class="label">City</label>
         <div class="wideField" colspan="3">
-          <input class="form-control field" id="locality" disabled="true">
+          <input class="form-control field" id="locality" ng-model="eventData.address.city"  disabled="true">
         </div>
 
         <label class="label">State</label>
         <div class="slimField">
-          <input class="form-control field" id="administrative_area_level_1" disabled="true">
+          <input class="form-control field" ng-model="eventData.address.administrativeArea" id="administrative_area_level_1" disabled="true">
         </div>
 
         <label class="label">Zip code</label>
         <div class="wideField">
-          <input class="form-control field" id="postal_code" disabled="true">
+          <input class="form-control field" id="postal_code" ng-model="eventData.address.postalCode" disabled="true">
         </div>
 
         <label class="label">Country</label>
         <div class="wideField" colspan="3">
-          <input class="form-control field" id="country" disabled="true">
+          <input class="form-control field" id="country" ng-model="eventData.address.country" disabled="true">
         </div>
     </div>
   </fieldset>
@@ -81,7 +81,7 @@
   <fieldset id="event-additional-info">
   <div class="form-group">
     <label>Guest list</label>
-    <textarea id="event-emails=list"  ng-model="eventData.emails" class="form-control" rows="2" placeholder="example@example.com, example2@example.com, example@example.com"></textarea>
+    <textarea id="event-emails=list"  ng-model="eventData.guests" class="form-control" rows="2" placeholder="example@example.com, example2@example.com, example@example.com"></textarea>
   </div>
   <div class="form-group">
     <label for="event_message">Additional information</label>
