Work on connection between user and events created by them

--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -35,5 +35,5 @@
       <option value="Going out to the movies">
     </datalist>
   </form-group>
-  <button type="submit" class="btn btn-default" ng-click="submitSignUp(user, 'signup')">Submit</button>
+  <button type="submit" class="btn btn-default" ng-click="submitSignUp(user)">Submit</button>
 </form>
