--- a/app/views/event.html
+++ b/app/views/event.html
@@ -89,7 +89,7 @@
   </div>
   </fieldset>
 
-  <button type="submit" class="btn btn-default" ng-click="createEvent(eventData)">Submit</button>
+  <button type="submit" class="btn btn-default" ng-click="createMeetUpEvent(eventData)">Submit</button>
 </form>
 
 <!--START location auto-complete code-->
