--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
-  <h1>Welcome to <strong>Join Me</strong>!</h1>
-  <p class="lead">Browse events created by other users or create your own</p>
+  <h1>Welcome!</h1>
+  <h2 class="lead">Browse events created by other users or create your own</h2>
 </div>
 
 <div class="row events-list">
