--- a/app/views/welcome.html
+++ b/app/views/welcome.html
@@ -1,12 +1,12 @@
 <div class="jumbotron">
-  <h1>Welcome to <strong>Join Me</strong>!</h1>
-  <p class="lead">Browse events created by other users or create your own</p>
+  <h1>Welcome!</h1>
+  <h2 class="lead">Browse events created by other users or create your own.</h2>
 </div>
 
 <div class="row events-list">
   <div class="col-lg-6">
+    <h4>Current events</h4>
     <ul class="events">
-      <li class="event">Events will be showed there</li>
       <li ng-repeat="meetUpEvent in meetUpEvents | orderBy:orderBy">
         {{ meetUpEvent.name }}: {{ meetUpEvent.type}}
 
